<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    tools:context=".MenuFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_menu"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_menu_subtitle"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layoutMenuButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnPlay2"
            android:backgroundTint="@color/bin_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_play_menu"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnPlay"
            android:backgroundTint="@color/bin_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_play_menu_2"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />
        <Button
            android:id="@+id/btnPlay3"
            android:backgroundTint="@color/bin_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPlay3"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rules_menu"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/bin_brown"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnExit"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_salir_menu"
            android:backgroundTint="@color/bin_black"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
