<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvItemMemoryScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_puntaje_0"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvItemMemoryMoves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tv_movimientos_0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvItemMemoryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tv_tiempo_0s"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvItemMemoryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_fecha"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
